Fixed header logo image on Safari

--- a/styles/src/modules/header.scss
+++ b/styles/src/modules/header.scss
@@ -16,7 +16,7 @@
   flex-flow: row wrap;
   align-items: center;
   box-sizing: border-box;
-  padding: 25px 52px 25px 39px;
+  padding: 0 52px 0 39px;
   background: #ff540e;
   font-size: 22rem;
 }
@@ -59,6 +59,10 @@
     flex-flow: column nowrap;
     align-items: flex-start;
     height: auto;
+    padding: {
+      top: 25px;
+      bottom: 25px;
+    }
   }
 
   .header_link {
